feat: create or update (#28)
* feat: create or update

* fix: change inner function names, delete comment

* fix: comment

* fix: comment
